# SimplePlatformer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile  build.sh  run.sh
res/: CMakeLists.txt
src/: CMakeLists.txt  allegro5_wrapper.cpp  allegro5_wrapper.h  director.cpp  director.h  engine.hpp  gameobject.h  main.cpp  presentation.cpp  scene.cpp  scene.h
src/engine/: actor.cpp  actor.hpp  alignment.hpp  allegro5_wrapper.cpp  allegro5_wrapper.h  allegro5_wrapper.hpp  camera.hpp  color.cpp  color.hpp  convert.cpp  convert.hpp  director.cpp  director.h  director.hpp  gameinfo.cpp  gameinfo.hpp  gameobject.cpp  gameobject.h  gameobject.hpp  scene.cpp  scene.h  scene.hpp  stage.cpp  stage.hpp  transform.cpp  transform.hpp
src/engine/event/: event_begin_contact.hpp  event_contact.hpp  event_end_contact.hpp  event_key_down.hpp  event_key_up.hpp  keycode.hpp
src/engine/physics/: dynamic_triangle.cpp  dynamic_triangle.hpp  physical_body.cpp  physical_body.hpp  pop_line.cpp  pop_triangle.cpp  static_line.cpp  static_line.hpp  static_triangle.cpp  static_triangle.hpp
src/engine/renderable/: renderable.hpp  triangle_attribute.hpp
src/engine/renderer/: bitmap_renderer.cpp  bitmap_renderer.hpp  line_renderer.cpp  line_renderer.hpp  renderer.cpp  renderer.hpp  triangle_renderer.cpp  triangle_renderer.hpp
src/game/: hero.cpp  hero.hpp  main_scene.cpp  main_scene.hpp  spike.cpp  spike.hpp
